--- a/index.html
+++ b/index.html
@@ -1,13 +1,18 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="https://unpkg.com/react@18/umd/react.development.js" crossorigin></script>
     <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js" crossorigin></script>
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
   </head>
   <body>
-
-    <div id="mydiv"></div>
+<div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <div id="mydiv"></div>
     <script type="text/babel">
       const hello = () => {
         return <h1>hello world</h1>
@@ -16,5 +21,8 @@
       const root = ReactDom.createRoot(container);
       root.render(<hello/>)
     </script>
+            </div>
+        </div>
+    </div>        
   </body>
 </html>
