--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <div class="container">
         <div class="row">
             <div class="col-md-12">
-                <div id="mydiv"></div>
+                <h1 id="mydiv" class="text-danger"></h1>
     <script type="text/babel">
       const hello = () => {
         return <h1>hello world</h1>
