--- a/index.html
+++ b/index.html
@@ -12,6 +12,39 @@
 <div class="container">
         <div class="row">
             <div class="col-md-12">
+              <nav class="navbar navbar-expand-sm bg-light navbar-light">
+  <div class="container-fluid">
+    <ul class="navbar-nav">
+      <li class="nav-item">
+        <a class="nav-link active" href="jsx.html">jsx</a>
+      </li>
+     <li class="nav-item">
+        <a class="nav-link" href="props.html">props</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="usestate.html">usestate</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="useeffect.html">useeffect</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="usecontext.html">usecontext</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="useref.html">useref</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link disabled" href="reducer.html">reducer</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="usecallback.html">usecallback</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="usememo.html">usememo</a>
+      </li>
+    </ul>
+  </div>
+</nav>
                 <h1 id="mydiv" class="text-danger"></h1>
     <script type="text/babel">
       const hello = () => {
