--- a/index.html
+++ b/index.html
@@ -45,17 +45,18 @@
     </ul>
   </div>
 </nav>
+    </div>
+    </div>
+    </div>        
                 <h1 id="mydiv" class="text-danger"></h1>
     <script type="text/babel">
-      const hello = () => {
-        return <h1>hello world</h1>
-      };
+      const hello (){
+        return <h1>hello world</h1>;
+      }
       const container = document.getElmentById('mydiv');
       const root = ReactDom.createRoot(container);
       root.render(<hello/>)
     </script>
-            </div>
-        </div>
-    </div>        
+         
   </body>
 </html>
