--- a/jsx.html
+++ b/jsx.html
@@ -17,5 +17,19 @@
   const root = ReactDOM.createRoot(container);
   root.render(myElement);
 </script>
+    <div class=" col-my-4 border">
+      <h1 class="my-3">jsx 표현식</h1>
+      <div id="ex"></div>
+      <script type="text/babel">
+        const myNumber = <h1>리액트는 간단한 수식은 표현식으로 가능하고 예로 {5+5}입니다</h1>
+        const ex = ReactDOM.createRoot(document.getElementById('ex'));
+            ex.render(myNumber)    
+  </script>
+       </div>
+    <div class="col-md-4 border">
+        </div>
+      </div>
+    </div>
+ 
   </body>
 </html>
